# serper-mcp

./: .coverage  .gitignore  LSP-MCP-plan.md  PRD-User-Stories  SECURITY.md  SECURITY_ASSESSMENT.md  codebase_opinions.md  language-server-troubleshooting.md  main.py  package.json  pyproject.toml  security_test.py  serper_mcp_server.py  serper_mcp_server_secure.py  test_async_analyze_topic.py  test_performance_comparison.py  test_serper_mcp_server.py
.roo/: mcp.json
.roo/rules/: rules.md
config_templates/: .env.development  .env.production
src/: run_analyze.py  serper_mcp_server.py  serper_mcp_server_secure.py  test_analyze_topic.py  test_normalization.py  test_serper_mcp_server.py
