[project]
name = "serper-mcp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastmcp==2.6.1",
    "python-dotenv",
    "openai",
    "networkx"
]


[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "ruff>=0.11.12",
    "ty>=0.0.1a8",
]
